# CUDA-AcceleratedVectorDatabaseEngine

./: .dockerignore  .gitignore  CLAUDE_CONTEXT.md  CMakeLists.txt  Dockerfile  LICENSE  README-DEPLOYMENT.md  README.md
bench/: CMakeLists.txt  benchmark.cpp
configs/: production.yaml
engine/: CMakeLists.txt  ivf_flat_index.cpp  ivf_flat_index.h  kernels.cu  kernels.cuh  prefetcher.cpp  prefetcher.h  transfer_manager.cpp  transfer_manager.h
format/: CMakeLists.txt  storage.cpp  storage.h
indexmgr/: CMakeLists.txt
k8s/: configmap.yaml  deployment.yaml  hpa.yaml  namespace.yaml  persistent-volume.yaml  rbac.yaml  service.yaml  servicemonitor.yaml
proto/: vdb.proto
scripts/: build.sh  deploy-gcp.sh  healthcheck.sh  quick-test.sh  setup-deps.sh  setup-v100-dev.sh
server/: CMakeLists.txt  admin_service.cpp  health_service.cpp  load_balancer.cpp  main.cpp  metrics.cpp  query_service.cpp  query_service.h
test/: CMakeLists.txt  gpu_vs_cpu_test.cpp  simple_test.cpp
test/integration/: CMakeLists.txt  grpc_integration_test.cpp  load_test.cpp  run_integration_tests.sh
